tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__FallenFromtheSky-AAAAAAAAAAAAAAAAAAACtQ==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 693,
  "prerequisites": [
    38
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You may have noticed big meteors everywhere, and maybe wondered if they're useful somehow? Well, they are, but not just yet. I'll give you a reward for collecting some now.\n\nInside the meteor you can find a skystone chest containing some processor press plates. Save them for later, you can't do AE2 without them. Though you can also just make them yourself in EV. Plus the chest is nice, and can be placed underneath blocks and still opened.\n\nIf all surface meteors have been raided, put some skystone in your Ore Finder to find underground ones, or wait until you can make a Meteorite Compass to find them.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lFallen From the Sky",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    38
  ],
  "rewards": [],
  "tasks": []
}
