tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__FinallySomePower-AAAAAAAAAAAAAAAAAAAAGw==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 27,
  "prerequisites": [
    24
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now that you have a coke oven, you can start producing charcoal. The more, the better. Creosote is produced at the same time, and the Coke Oven will stop when it's full of either one, which means you can't just leave the Creosote there. Refer to the Creosote quest from before to learn what to do with it.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lFinally, Some Powerful Fuel",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    24
  ],
  "rewards": [],
  "tasks": []
}
