tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__FiniteWater-AAAAAAAAAAAAAAAAAAAAFg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 22,
  "prerequisites": [
    23
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Finite water is a problem, that's for sure. Last night, you had an idea. If you can drink cacti, you should also be able to make water out of 8 cacti and use that for most recipes that require water. How cool is that? So what about another trade? 10 wood for... 3 cacti so you can set up a farm. Deal?\n\nTo automate the farm, place a string next to the cactus and a sand on top of the string. Now when the cactus grows, it will automatically break! You can stack this horizontally and vertically to make a very efficient cactus farm. Use water to redirect the cactus to a convenient pickup location or to above a hopper.\n\nFirst player to make a base running off of only cactus water gets a cape!",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lFinite Water!?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    23
  ],
  "rewards": [],
  "tasks": []
}
