tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__Gardener-AAAAAAAAAAAAAAAAAAAB4w==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 483,
  "prerequisites": [
    36
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you were wondering: Why do I never get seeds when destroying grass? Because.\n\nUse your new mattock on the grass blocks that do not have water anywhere nearby to find some seeds.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lGardener",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    36
  ],
  "rewards": [],
  "tasks": []
}
