tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__GettingCharcoal-AAAAAAAAAAAAAAAAAAAAGA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 24,
  "prerequisites": [
    17,
    26
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Now you can make the bricks for your first multiblock structure. 104 bricks to be exact. Good that you just collected a lot of resources! What a coincidence...\n\nThe bricks you'll need are somewhat special. Make sure to craft the correct ones. With that done, let's build a coke oven to get some charcoal or coal coke! It may be useful to note that the oven doesn't automatically output its fluid contents. Faucets and pumps can help to change that.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 1,
    "name": "§2§lGetting (Char)coal",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    17,
    26
  ],
  "rewards": [],
  "tasks": []
}
