tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__GotaFlatTire-AAAAAAAAAAAAAAAAAAAJYg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2402,
  "prerequisites": [
    36
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The crowbar is the GT tool used to remove a cover off of a machine, pipe, or wire. Covers can be decorative, functional like pumps and conveyors, or for safety, like putting a wooden plank over your steam pipes so they don't burn you.\n\nSorry, it only comes in blue!\n\nYes, we know there are also red crowbars, but they are from Railcraft and generally inferior. Better ignore them.",
    "global_share": true,
    "icon": null,
    "ignoreNBT": 1,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lGot a Flat Tire?",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    36
  ],
  "rewards": [],
  "tasks": []
}
