tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__GravelTheGatheri-AAAAAAAAAAAAAAAAAAAAFA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 20,
  "prerequisites": [
    15
  ],
  "properties": {
    "auto_claim": false,
    "desc": "You think it would be a good idea to collect more gravel in order to provide yourself with flint for the journey ahead. Try searching near water.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lGravel: The Gathering",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    15
  ],
  "rewards": [],
  "tasks": []
}
