tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__Tier0StoneAge-AAAAAAAAAAAAAAAAAAAAAQ==__ImportantTools-AAAAAAAAAAAAAAAAAAAAJA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 36,
  "prerequisites": [
    37
  ],
  "properties": {
    "auto_claim": false,
    "desc": "In order to craft even basic machines, you'll need new tools. Most of them can be replaced by machines later. For now, you should become familiar with each of their recipes, as you will need a lot of these tools, starting today.\n\nYour new tools can also be used to make Railcraft water tanks, a very useful multiblock considering the finite water feature.\n\nThere are also electric versions of the tools, you can upgrade later if you want. Also, there are many versions of the tools, they generally follow the same rules as tinkers parts in terms of how good they are, similarly to turbines. You can look at the spreadsheet for more info on GT tool stats.\n\nFor this quest, you can use whatever materials you want. The gem version of the saw is crafted differently to metal versions. Higher tier tools need steel or tungstensteel rods instead of sticks.\n\n[note]If you want to know the recipe for a tool using your specific material, be sure to take advantage of the magnifying glass icon at the top of the tool list so you can search for it. (Try out Iron for these quests!)[/note]",
    "global_share": true,
    "icon": null,
    "ignoreNBT": 1,
    "is_global": false,
    "is_main": true,
    "is_silent": false,
    "locked_progress": 1,
    "name": "§2§lImportant Tools",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    37
  ],
  "rewards": [],
  "tasks": []
}
